--- a/AdventOfCode2016/AdventOfCode2016.csproj
+++ b/AdventOfCode2016/AdventOfCode2016.csproj
@@ -74,7 +74,9 @@
     <Content Include="Input\Day8.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Input\Day9.txt" />
+    <Content Include="Input\Day9.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
